[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["json"] }
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
